--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<br/>
 	<input type="button" onclick="DZ.player.playRadio(203); return false;" value="Play Radio"/>
 	<input type="button" onclick="DZ.player.playSmartRadio(13); return false;" value="Play Smart Radio"/>
+	<input type="button" onclick="DZ.player.playRadio(1996005, 'user'); return false;" value="Play User Radio"/>	
 	
 	<br/>
 	<input type="button" onclick="DZ.player.play(); return false;" value="play"/>
