--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
   <div class="bar" style="width: 0%;"></div>
 </div>
 <script>
+	var LOGNS = 'APP ::';
+	
 	$(document).ready(function(){
 		$("#controlers input").attr('disabled', true);
 		$("#slider_seek").click(function(evt,arg){
